# mfl-ai-gm

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: scaffold.sh  verify_api.py
service/: main.py
service/routers/: __init__.py  analysis.py  franchise.py  snapshot.py
service/static/: index.html
src/mfl_ai_gm/adapters/: dynastyprocess_client.py  fantasycalc_client.py  ktc_client.py  mfl_client.py
src/mfl_ai_gm/analysis/: age_curve.py  roster_construction.py  sell_high.py  trade_calculator.py  value_aggregator.py  waiver_recommender.py
src/mfl_ai_gm/domain/: models.py
src/mfl_ai_gm/snapshot/: builder.py
